stacks/kubernetes/infra/apps/demo/grafana/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: tools
spec:
  type: ClusterIP

  selector:
    app: grafana

  ports:
    - name: http
      port: 3000
      targetPort: http
