stacks/kubernetes/infra/apps/demo/grafana/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
  - host: testgrafana.boiguille.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
